--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
                     <b>Clases en vivo</b> - <b>Cursos Practicos</b> - <b>Enfocadas en Niños</b>
                 </p>
                 <div class="row" style="padding: 0px; margin-top: 20px; white-space: pre-wrap;">
-                    <input class="ms-TextField-field field-105" placeholder="✉ Ingrese su Email" style="margin-right: 5px;">
+                   <label>
+                       <input class="ms-TextField-field field-105" type="email" placeholder="Ingrese su Email" style="margin-right: 5px;">
+                    </label>
                     <a class="ms-Button" style="background-color: #0fab0a; border-radius: 0%;">
-                        <span class="ms-Button-label" style="font-weight: 800 !important; color: white;">SOLICITAR INFORMACIÓN</span>
+                        <span class="ms-Button-label" style="font-weight: 800 !important; color: white; text-align: center; height: 100%;">SOLICITAR INFORMACIÓN</span>
                     </a>
                 </div>
             </div>
