--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     </div>
     <main>
         <div class="bg-video-wrap">
-            <video src="https://files.uxpin.com/homepage/videos/home-header.mp4" loop muted autoplay>
-            </video>
             <div class="overlay">
+            <video style="opacity: 0.37;" src="https://files.uxpin.com/homepage/videos/home-header.mp4" loop muted autoplay>
+            </video>
             </div>
             <div class="centerdiv">
                 <h1>
