--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/984a46be28.js" crossorigin="anonymous"></script>
+   
 </head>
 <body>
     <div class="cookies">
@@ -129,10 +131,26 @@
                     <p>We are always looking for new photographers to collaborate and expand together with. Our though
                         tfully constructed pricing options are fit for your needs at an affordable cost. In fact, you can pa
                         y off the cost with the sale of just one or two prints.</p><br>
-                        <a class="ms-Button ms-Button--compound">
-                            <span class="ms-Button-label" style="font-size: 16px;">Solicitar Informes</span>
-                            <span class="ms-Button-description">En unos minutos nos comunicaremos contigo</span>
-                          </a>
+                       <div class="row" style="padding:0px; display: flex;">
+                           <a class="" style="margin-right: 20px;">
+                               <span class="ms-Button-label" style="font-size: 16px;">Solicitar Informes:</span>
+                            </a>
+                            <a class="ms-Button" style="min-width: inherit;
+                            padding: 4px 10px !important;     width: fit-content !important;
+    text-align: center;">
+                                <span class="ms-Button-label" style="font-size: 16px;"><i class="fa fa-whatsapp"></i></span>
+                             </a>
+                             <a class="ms-Button" style="min-width: inherit !important;
+                             padding: 4px 10px !important;    width: fit-content !important;
+    text-align: center;">
+                                <span class="ms-Button-label" style="font-size: 16px;"><i class="fa fa-facebook"></i></span>
+                             </a>
+                             <a class="ms-Button" style="min-width: inherit;
+                             padding: 4px 10px !important;    width: fit-content !important;
+    text-align: center; ">
+                                <span class="ms-Button-label" style="font-size: 16px;"><i class="fa fa-envelope"></i></span>
+                             </a>
+                           </div>
                         <hr style="border: none; height: 1px;"><br><h4 style="line-height: 25px;">Estamos dictado hasta ahora <span style="border-radius: 1px; background: #0fab0a; color: #f9f9f9; padding: 5px 10px 5px 11px;">16</span> cursos en vivo.</h4>
                 </div>
             </div>
